# aws-cppwrapper-lattigo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: bootstrapping.cpp  sigmoid.cpp
src/gowrapper/: CMakeLists.txt  go.mod
src/gowrapper/ckks/: bootstrap.go  bootstrap_params.go  ciphertext.go  decryptor.go  encoder.go  encryptor.go  evaluator.go  keygen.go  marshaler.go  params.go  plaintext.go  precision.go
src/latticpp/ckks/: CMakeLists.txt  bootstrap.cpp  bootstrap.h  bootstrap_params.cpp  bootstrap_params.h  ciphertext.cpp  ciphertext.h  encryptor.cpp  encryptor.h  evaluator.cpp  evaluator.h  keygen.cpp  keygen.h  lattigo_param.h  marshaler.cpp  params.cpp
src/latticpp/marshal/: gohandle.h
